syntax = "proto3";

option go_package = "./proto";

package videostream;

service VideoStreamService {
    rpc ListVideos(NoParam) returns (VideoList);
    rpc GetVideoMetaData (VideoRequest) returns (VideoMetadata);
    rpc StreamVideo (VideoRequest) returns (stream VideoChunk);

    rpc CreateWatchParty(CreatePartyRequest) returns (PartyResponse);
    rpc JoinWatchParty(JoinPartyRequest) returns (PartyResponse);

    rpc SyncPlayback(stream PlaybackCommand) returns (stream PlaybackCommand);

}

message NoParam{};

message VideoRequest{
    string video_name = 1;
};

message VideoList{
    repeated string videos = 1;
}

message VideoMetadata{
    string name = 1;
    int64 size = 2; // in bytes
    string format = 3;
    int64 duration = 4; // in seconds
}

message VideoChunk{
    bytes chunk_data = 1;
}

message CreatePartyRequest{
    string host_name = 1;
}

message JoinPartyRequest{
    string party_id = 1;
    string user_name = 2;
}
message PartyResponse {
    string party_id = 1;   
    string status = 2;
    repeated string users = 3;
}

message PlaybackCommand{
    string party_id = 1;
    string command = 2;
    int64 timestamp = 3;
    string user_name = 4;
}